css/style.css
:root {
    --burgundy--:#B91646;
    --dark-green:#105652;
    --mustard-yellow:#F9C041;
    --bg-color:#FBF3E4;
    --bg-color-dark-grey:#DFD8CA;
    --cursive-font:'Alex Brush',
            cursive;
    --paragraph-font: 'Poppins',
        sans-serif;
    --bold-font:'Bayon',
        sans-serif;
}

body{
    background-color: var(--bg-color);
    margin-top: 10px;
    
    
}
h1{
    font-family:var(--bold-font);
    font-size: 120px;
    margin: 0;   
    line-height: 1; 
}
.head, p{
    margin: 0;
    font-family: var(--cursive-font);
    font-size: 100px;  
    line-height: 0.5;
    color: var(--burgundy--);

}

.aboutH1, h1{
    font-size: 100px;
}
h1,p{
    display: flex;
    justify-content: center;
}
h2{
    display: flex;
    justify-content: center;
    border: 2px solid black;
    border-radius: 5px;
    background: var(--bg-color-dark-grey);
    max-width: 100%;
    padding: 5px 40px;
    font-family:var(--paragraph-font);
    font-size: 27px ;  
    font-weight: 300;  
}

h3{
    font-family: var(--bold-font);
    font-size: 60px;
    text-align: center;
    margin-top: 100px;
    
    
}
p { font-family: var(--paragraph-font);
    font-size: 25px;
    line-height: 1.5;
    color: black;
    font-weight: 300;
    }
 img{
    border: 3px solid black;
    border-radius: 15px;
 } 
 ul{
    text-align: center;
    list-style: none;
 } 
 li{
    font-family: var(--paragraph-font);
    font-size: 25px;
    line-height: 2.5;
 }
  
 li, a{
    text-decoration: none;
 }
 .contactPageSection,h3{
    margin-top: 200px;
 }
 .bella, img{
    margin-top: 100px;
    background: var(--bg-color-dark-grey);
    padding: 30px;
 } 
 .weatherPic, img{
    margin-left: 70px;
    margin-top: 190px;
    background: var(--bg-color-dark-grey);
    padding: 30px;
 }

 .reviewsPic,img{
    margin-top: 120px;
    background: var(--bg-color-dark-grey);
    padding: 30px;
 }
 .nav-link, a{
    font-family: var(--bold-font);
 }
 .meImg,img{
    margin-left:0;
    padding: 35px;
    background: var(--burgundy--);
    margin-top: 75px;
 }
 .paragraph1, div{
   padding: 50px;
   
   
 }
 .paragraph2, div{
    padding: 50px;
 }
.name{
    display: flex;
    justify-content: center;
}
.container-fluid, div{
    padding: 3px;
}

.aboutContainerRow{
    margin-top: 140px;
    margin-bottom: 100px;
}
.heading{
    padding-top: 120px;
    padding-bottom: 50px;
    background-color: white;
    
}
.bellaBtn{
    border: 2px solid black;
    padding: 10px 50px;
    border-radius: 5px;
    background: var(--mustard-yellow);
    text-decoration: none;
    display: flex;
    justify-content: center;
    margin-top: 35px;
    width: 50%;
    color: white;
    font-family: var(--bold-font);
    font-size: 25px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   
}
.navbar-brand{
    margin-left: 20px;
    font-family: var(--cursive-font);
    font-size: 40px;
    
}
.weatherBtn{
    border: 2px solid black;
    padding: 10px 50px;
    border-radius: 5px;
    background: var(--dark-green);
    text-decoration: none;
    display: flex;
    justify-content: center;
    margin-top: 35px;
    width: 50%;
    color: white;
    font-family: var(--bold-font);
    font-size: 25px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
}

.reviewsBtn{
    border: 2px solid black;
        padding: 10px 50px;
        border-radius: 5px;
        background: var(--burgundy--);
        text-decoration: none;
        display: flex;
        justify-content: center;
        margin-top: 35px;
        margin-bottom: 40px;
        width: 50%;
        color: white;
        font-family: var(--bold-font);
        font-size: 25px;
        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);}

.contactMeBtn{
border: 2px solid black;
    padding: 10px 50px;
    border-radius: 5px;
    background: var(--mustard-yellow);
    text-decoration: none;
    display: flex;
    justify-content: center;
    margin-top: 35px;
    
    width: 50%;
    color: white;
    font-family: var(--bold-font);
    font-size: 25px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
}        
@media(max-width:600px){
   .head, p{
    font-size: 55px; 
   }
  h1{
    font-size: 70px;} 
  h2{
    font-size: 20px;
    margin: 0;
  } 
  h3{
    font-size: 42px;
    margin-top: 0;
  } 
  p{
    font-size: 25px;
  }
  
 .bellaBtn, .weatherBtn, .reviewsBtn, .contactMeBtn{
    width: 100%;
    margin-left: 0;
 }  
}

@media(max-width:600px){
    .aboutH1, h1{
        font-size: 60px; 
    }
    .aboutContainerRow, div{
        padding: 0;
        margin-top: 100px;
    }
    .meImg, img{
        margin-top: 0;
        margin-bottom: 50px;
    }
    .paragraph1,div{
        padding-top: 50px;
    }
    .container-fluid, div{
        margin-top: 0;
    }
    .emptySpace, div{
        padding: 0;
    }
    .nav-link, a{
        margin-left: 30px;
    }
    .navbar-toggler,button{
       margin-right: 25px; 
    }
}

